...
                    android:text="@string/water_goal"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/newWaterGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
...
                    android:paddingRight="4dp"
                    android:paddingBottom="0dp"
                    android:text="@android:string/cancel"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/okButton"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="50dp"
                    android:layout_height="28dp"
                    android:onClick="changeWaterGoalOnClick"
                    android:paddingLeft="4dp"
                    android:paddingTop="0dp"
...
