...
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/purple_500"
        android:orientation="horizontal">

        <Button
            android:id="@+id/headerBackButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:icon="?attr/homeAsUpIndicator" />

        <TextView
            android:id="@+id/headerName"
...
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/water_goal"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/waterGoalAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="TextView"
                    android:textColor="@color/purple_200"
...
