...
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/calorie_calculations">

                <TextView
                    android:id="@+id/calorie_goal_number"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="25dp"
                    android:paddingLeft="25dp"
                    android:layout_marginLeft="12dp"
                    android:textAlignment="center"
...
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="0dp"
                    android:layout_toRightOf="@id/calorie_goal"
                    android:src="@drawable/ic_minus" />

                <TextView
                    android:id="@+id/calorie_food_number"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:paddingTop="25dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
...
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:text="@string/Breakfast"
                    android:layout_below="@id/calorie_goal"/>

                <TextView
                    android:id="@+id/totalBreakfastCalories"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="500dp"
                    android:paddingRight="25dp"
                    android:paddingTop="2.5dp"
...
                    android:id="@+id/breakfastList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/breakfastHeader"/>

                <Button
                    android:id="@+id/breakfastButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add Food"
                    android:layout_below="@id/breakfastList"
                    android:onClick="addFoodOnClick"/>

...
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:text="@string/Lunch"
                    android:layout_below="@id/breakfastButton" />

                <TextView
                    android:id="@+id/totalLunchCalories"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="500dp"
                    android:paddingRight="25dp"
                    android:paddingTop="2.5dp"
...
                    android:id="@+id/lunchList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/lunchHeader"/>

                <Button
                    android:id="@+id/lunchButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add Food"
                    android:layout_below="@id/lunchList"
                    android:onClick="addFoodOnClick"/>

...
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:text="@string/Dinner"
                    android:layout_below="@id/lunchButton" />

                <TextView
                    android:id="@+id/totalDinnerCalories"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="500dp"
                    android:paddingRight="25dp"
                    android:paddingTop="2.5dp"
...
                    android:id="@+id/dinnerList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/dinnerHeader"/>

                <Button
                    android:id="@+id/dinnerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add Food"
                    android:layout_below="@id/dinnerList"
                    android:onClick="addFoodOnClick"/>

...
                    android:layout_toRightOf="@id/viewDailySummaryButton"
                    android:layout_marginLeft="100dp"
                    android:padding="@dimen/view_summary_button_padding"
                    android:onClick="weeklySummaryOnClick"/>

                <Button
                    android:id="@+id/profileButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="View Profile"
                    android:layout_below="@id/waterButton"
                    android:background="@color/purple_500"
                    android:textColor="@color/white"
...
