...
                    android:text="@string/calorie_goal"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/newCalorieGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
...
