<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Fitness Friend</string>

    <string name="Goal">GOAL</string>
    <string name="Minus">-</string>
    <string name="Food">FOOD</string>
    <string name="Plus">+</string>
    <string name="exercise">EXERCISE</string>
    <string name="Exercise">Exercise</string>
    <string name="Equal">=</string>
    <string name="Remaining">REMAINING</string>
    <string name="Data">Data</string>
    <string name="Add">Add</string>
    <string name="ViewDailySummary">VIEW DAILY SUMMARY</string>
    <string name="ViewWeeklySummary">VIEW WEEKLY SUMMARY</string>
    <string name="Breakfast">BREAKFAST</string>
    <string name="Lunch">LUNCH</string>
    <string name="Snack">SNACK</string>
    <string name="Dinner">DINNER</string>
    <string name="pieChart">pieChart</string>
    <string name="Calories">Calories</string>
    <string name="CaloriesWeek">Calories Per Day of the Week</string>
    <string name="Date">Date</string>
    <string name="Water">WATER</string>
    <string name="MACROS">MACROS</string>
    <string name="Macros">Macros</string>
    <string name="Protein">Protein</string>
    <string name="Percentage">Percentage</string>
    <string name="Carbohydrates">Carbohydrates</string>
    <string name="Fat">Fat</string>
    <string name="Minutes">Minutes</string>
    <string name="CaloriesBurned">Calories Burned</string>
    <string name="WeeklySummary">Weeky Summary</string>
    <string name="profile">Profile</string>
    <string name="calorie_goal">Calorie Goal</string>
    <string name="water_goal">Water Goal</string>
</resources>